--- a/backend/package.json
+++ b/backend/package.json
@@ -1,22 +1,25 @@
 {
   "name": "ordermodule",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "amqplib": "^0.10.8",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "ioredis": "^5.6.1",
+    "mysql2": "^3.14.1",
     "uuid": "^11.1.0"
   }
 }
